fix delete link on small preview

--- a/styles/mine.scss
+++ b/styles/mine.scss
@@ -46,7 +46,7 @@ audio {
 
     div {
         display: inline-block;
-        min-width: 100px;
+        min-width: 200px;
         overflow: hidden;
         position: relative;
     }
